--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -118,6 +118,7 @@
         </FrameLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -133,12 +134,12 @@
                 android:textSize="19sp"/>
 
             <NumberPicker
+                android:id="@+id/notice_numberpicker"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
                 app:layout_constraintTop_toBottomOf="@id/assign_notice_text_view"
                 app:layout_constraintRight_toLeftOf="@id/minutes_earlier_text_view"
-                android:solidColor="@color/logoBackgroundHeader"
-                android:theme="@style/Theme.AppCompat" />
+                android:solidColor="@color/lightGrey" />
 
             <TextView
                 android:id="@+id/minutes_earlier_text_view"
