--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -82,30 +82,30 @@
 
     </RelativeLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="4dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <FrameLayout
+        <TextView
+            android:id="@+id/assing_an_icon_text_view"
             android:layout_width="wrap_content"
-            android:layout_height="40dp">
-
-            <TextView
-                android:id="@+id/assing_an_icon_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="Assign an icon:"
-                android:textColor="@android:color/white"
-                android:textSize="19dp" />
-
-        </FrameLayout>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="Assign an icon:"
+            android:textColor="@android:color/white"
+            android:textSize="19dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <FrameLayout
             android:id="@+id/frame_icon"
             android:layout_width="40dp"
-            android:layout_height="40dp">
+            android:layout_height="40dp"
+            app:layout_constraintLeft_toRightOf="@id/assing_an_icon_text_view"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/chosen_icon"
@@ -117,46 +117,30 @@
 
         </FrameLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/assign_notice_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Set notification's notice in minutes"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="19sp"
+            app:layout_constraintTop_toBottomOf="@id/assing_an_icon_text_view"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="20dp"/>
 
-            <TextView
-                android:id="@+id/assign_notice_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:textAlignment="center"
-                android:text="Notification's notice"
-                android:textColor="@android:color/white"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:textSize="19sp"/>
-
-            <NumberPicker
-                android:id="@+id/notice_numberpicker"
-                android:layout_width="50dp"
-                android:layout_height="40dp"
-                app:layout_constraintTop_toBottomOf="@id/assign_notice_text_view"
-                app:layout_constraintRight_toLeftOf="@id/minutes_earlier_text_view"
-                android:solidColor="@color/lightGrey" />
-
-            <TextView
-                android:id="@+id/minutes_earlier_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_marginTop="11dp"
-                android:layout_gravity="center_vertical"
-                android:text="minutes earlier"
-                android:textColor="@android:color/white"
-                app:layout_constraintTop_toBottomOf="@id/assign_notice_text_view"
-                app:layout_constraintRight_toRightOf="parent"
-                android:textSize="13sp"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <NumberPicker
+            android:id="@+id/notice_numberpicker"
+            android:layout_width="50dp"
+            android:layout_height="80dp"
+            android:solidColor="@color/lightGrey"
+            app:layout_constraintLeft_toRightOf="@id/assign_notice_text_view"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"/>
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
