--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -232,15 +231,24 @@
 
     </LinearLayout>
 
-
-    <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
-        android:id="@+id/eventPainterContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+    <ScrollView
+        android:id="@+id/scrollpaint"
+        android:layout_width="100dp"
+        android:layout_height="500dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHeight_percent=".80"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:fillViewport="true"
+        android:scrollbars="vertical">
 
+        <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
+            android:id="@+id/eventPainterContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHeight_percent=".80"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
