--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -166,6 +166,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:orientation="vertical"
+        android:layout_marginStart="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -237,11 +238,10 @@
         android:layout_height="500dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:fillViewport="true"
-        android:scrollbars="vertical">
+        android:fillViewport="true">
 
         <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
-            android:id="@+id/eventPainterContainer"
+            android:id="@+id/eventPainterContainerVertical"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -250,5 +250,14 @@
             app:layout_constraintLeft_toLeftOf="parent" />
 
     </ScrollView>
+
+    <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
+        android:id="@+id/eventPainterContainerRectangular"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHeight_percent=".80"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
