--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -284,4 +284,13 @@
         app:layout_constraintHeight_percent=".80"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
+        android:id="@+id/eventPainterContainerFibonacci"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHeight_percent="0.50"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
