--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_activity"
@@ -161,19 +162,14 @@
 
     </eu.marcellofabbri.dailyroadmap.view.activityHelpers.MainHeader>
 
-    <LinearLayout
-        android:id="@+id/central_container_larger"
-        android:layout_width="215dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="vertical"
-        android:layout_marginStart="0dp"
-        app:layout_constraintLeft_toRightOf="@id/scrollpaint"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header">
-
-    </LinearLayout>
+    <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
+        android:id="@+id/eventPainterContainerFibonacci"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintHeight_percent="0.45"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <RelativeLayout
         android:id="@+id/alternativeDeleteButton"
@@ -195,11 +191,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
         android:elevation="1dp">
-
-        <View
-            android:id="@+id/topMargin_recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
@@ -266,27 +257,6 @@
 
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/scrollpaint"
-        android:layout_width="100dp"
-        android:layout_height="480dp"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:fillViewport="true"
-        android:requiresFadingEdge="vertical">
-
-        <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
-            android:id="@+id/eventPainterContainerVertical"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHeight_percent=".80"
-            app:layout_constraintLeft_toLeftOf="parent" />
-
-    </ScrollView>
-
     <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
         android:id="@+id/eventPainterContainerRectangular"
         android:layout_width="wrap_content"
@@ -294,15 +264,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHeight_percent=".80"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <eu.marcellofabbri.dailyroadmap.view.activityHelpers.EventPainterContainer
-        android:id="@+id/eventPainterContainerFibonacci"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHeight_percent="0.50"
         app:layout_constraintLeft_toLeftOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
